# swiggen

./: Cargo.toml  README.md
src/: lib.rs
swig-derive/: Cargo.toml
swig-derive-test/: Cargo.toml  Makefile  README.md  bindings.h  expanded.rs  swig.i  test.py
swig-derive-test/src/: lib.rs
swig-derive/src/: lib.rs
swiggen/: Cargo.toml
swiggen/src/: lib.rs  main.rs  ty.rs
