[package]
name = "swiggen"
version = "0.1.0"
authors = ["Sam Scott <sam.scott89@gmail.com>"]

[dependencies]
failure = "0.1"
proc-macro2 = "0.4"
serde = "1.0.66"
tempdir = "0.3.7"
toml = "0.4"
log = "0.4.2"
env_logger = "0.5.10"

[dependencies.syn]
version = "0.14"
default-features = false
features = ["clone-impls", "derive", "parsing", "printing", "full", "extra-traits"]

[dependencies.cbindgen]
# version = "0.6"
git = "https://github.com/samscott89/cbindgen"

[dependencies.quote]
default-features = false
version = "0.6"

[[bin]]
name = "swiggen"
path = "src/main.rs"
